# Bot-Trading-EMA-Cross-CCI

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  log.txt  pyproject.toml
src/: __init__.py  main.py
src/config/: settings.py
src/data/: candle_manager.py  websocket_feed.py
src/database/: mongo_manager.py
src/execution/: order_manager.py  position_tracker.py
src/indicators/: cci.py  ema.py
src/notifications/: telegram_notifier.py
src/risk/: risk_manager.py
src/strategy/: ema_cci_strategy.py
src/utils/: logger.py
tests/: test_balance.py  test_indicators.py  test_risk_manager.py  test_strategy.py
